# fastapi-celery-redis

./: Makefile  README.md  main.py  pyproject.toml
apps/: cache_redis.py  models.py  schemas.py
apps/routes/: __init__.py  auth.py  post.py
apps/services/: auth.py  post.py
celery_tasks/: email_sender.py  post.py
config/: settings.py
